# SelfHeal

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml
dashboard/: package-lock.json  package.json
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: main.rs
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/interview/: page.tsx
src/selfheal/: __init__.py  config.py  db.py  errors.py  result.py  retry.py
src/selfheal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/selfheal/api/: app.py
src/selfheal/api/routers/: sync.py  system.py  tasks.py
src/selfheal/calendar/: __init__.py
src/selfheal/calendar/providers/: __init__.py  caldav.py  clickup.py  google.py
src/selfheal/cli/: calendar.py  core.py  daemon.py  main.py  tasks.py
src/selfheal/daemon/: __init__.py  client.py  service.py
src/selfheal/daemon/tasks/: notify.py  schedule.py  sync.py
src/selfheal/engine/: life_model.py  scheduler.py  scheduler_prompts.py  scheduler_v2_patch.py  scorer.py
src/selfheal/interview/: prompts.py  runner.py  session.py
src/selfheal/llm/: __init__.py  anthropic.py  base.py  nim.py  ollama.py  openai.py
src/selfheal/models/: life_model.py  schedule.py  score.py  task.py
src/selfheal/obsidian/: __init__.py
src/selfheal/repositories/: base.py  score_repository.py  task_repository.py
src/selfheal/services/: scheduler_service.py  sync_service.py  task_service.py
src/selfheal/systemd/: selfheal-daemon.service  selfheal.target
src/selfheal/tui/: __init__.py  app.py
src/selfheal/tui/screens/: dashboard.py  history.py  modals.py  schedule.py  tasks.py
src/selfheal/tui/widgets/: __init__.py  hour_bar.py  score_ring.py  task_table.py  timeline.py
src/selfheal/wallpaper/: __init__.py  generator.py
src/selfheal/workers/: daemon_worker.py
systemd/: selfheal-daemon-run  selfheal-daemon.service
tests/: conftest.py  test_calendar_aggregation.py  test_calendar_llm_cli_tui_more.py  test_cli_config.py  test_clickup_provider.py  test_config.py  test_daemon_client.py  test_daemon_logging.py  test_daemon_service_commands.py  test_daemon_sync.py  test_db.py  test_llm.py  test_obsidian_wallpaper_interview_life_model.py  test_result.py  test_retry.py  test_scheduler.py  test_scorer.py  test_second_coverage_batch.py  test_tui_app.py
