[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "selfheal"
dynamic = ["version"]
description = "AI-driven life manager that tells you what to do, when, and in what order"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "SelfHeal maintainers"},
]
keywords = [
    "ai",
    "calendar",
    "productivity",
    "scheduling",
    "terminal-ui",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "caldav>=1.0.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
selfheal = "selfheal.cli.main:app"

[project.urls]
Homepage = "https://pypi.org/project/selfheal/"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
selfheal = ["systemd/*"]


[tool.setuptools.packages.find]
where = ["src"]
include = ["selfheal*"]
exclude = [
    "tests*",
    "systemd*",
]

[tool.setuptools_scm]
fallback_version = "0.1.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.towncrier]
package = "selfheal"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## {version} - {project_date}"
issue_format = "#{issue}"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.0",
    "towncrier>=24.8.0",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
exclude = [
    ".venv",
    "build",
    "dist",
    "systemd",
    "src/selfheal.egg-info",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401"]
