[package]
name = "selfheal"
version = "1.0.0"
description = "A SelfHeal Life Orchestrator"
authors = ["SelfHeal Team"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "api-all", "process-command-api"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# py-sidecar is a custom feature to trigger backend start
custom-protocol = ["tauri/custom-protocol"]
